# whisperpipe

./: .gitignore  BENCHMARK_README.md  Benchmark.py  COMPLETION_SUMMARY.md  DEBUG_MODE_USAGE.md  INSTRUCTIONS.md  MANIFEST.in  PAPER_READY.md  PUBLISHING.md  QUICK_REFERENCE.md  README.md  README_NEW_FEATURES.md  debug_logger.py  example_usage.py  fasterwhis.py  fix-done.md  generate_sample_audio.py  group_benchmark.py  instructions.md  links.txt  main-stream.py  main.py  main_stream.py  openai-whisper.py  othergood.py  pyproject.toml  real_audio_test.py  results.txt  run_paper_evaluation.py  simple_usage.py  test_api.py  test_callback_and_pause.py  test_evaluation.py  test_integration.py  test_minimal.py  test_minimal_new.py  test_new_implementation.py  test_package.py  turbomodel.py
.github/workflows/: release.yaml  test-pypi-rc.yaml  test-python.yaml
baselines/: __init__.py  naive_streaming.py
configs/: default.yaml
evaluation/: INSTRUCTIONS.md  PAPER_ANALYSIS.md  PAPER_METRICS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  __init__.py  compare.py  evaluate_audio.py  evaluate_models.py  examples.py  generate_metrics.py  logger.py  metrics.py  naive_whisper.py  resource_monitor.py  test_metrics.py  validate_syntax.py  whisper_baseline.py
experiments/: benchmark.py  compare_systems.py
paper_evaluation/: USAGE_GUIDE.md  benchmark_runner.py  interactive_analysis.ipynb  latex_generator.py  plot_generator.py  report_generator.py  statistical_analysis.py
st----final/: prfes-whiper-final.py  simcheck.py  timstamp.py  truework.txt  v10-countinuesly copy.py  v10-countinuesly.py  v11-notimer.py  v11-optimiz.py  v12-mine-op.py  v13-add-word-base.py  v13-remove-end.py  v14-final.py  v15-main.py  v2.py  v3.py  v4.py  v5-complete.py  v5.py  v6-nogreeting.py  v7-ending rule copy.py  v7-ending rule.py  v8-stable-whisper.py  v9-whisper-optimized.py  v9-whisper-spoken-diff.py
streaming/: python-emotion.py  python-faster-usual.py  python-usual.py  steamcopcpp-down.py  steamcopcpp-emotion.py
tests/: __init__.py  conftest.py  test_api.py  test_functionality.py  test_package_structure.py
whisperpipe/: __init__.py  core.py
